// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Expense Form Test 1 - Expense Form Render 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      onChange={[Function]}
      placeholder="Description"
      type="text"
      value=""
    />
    <input
      onChange={[Function]}
      placeholder="Amount"
      type="text"
      value=""
    />
    <input
      onChange={[Function]}
      placeholder="Date"
      type="number"
      value={0}
    />
    <textarea
      onChange={[Function]}
      placeholder="Add a note for your expense (optional)"
      value=""
    />
    <input
      type="submit"
      value="Add Expense"
    />
  </form>
</div>
`;

exports[`Expense Form Test 2 - Expense Form with Data 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      onChange={[Function]}
      placeholder="Description"
      type="text"
    />
    <input
      onChange={[Function]}
      placeholder="Amount"
      type="text"
      value="5000"
    />
    <input
      onChange={[Function]}
      placeholder="Date"
      type="number"
      value={-259200000}
    />
    <textarea
      onChange={[Function]}
      placeholder="Add a note for your expense (optional)"
      value="note2"
    />
    <input
      type="submit"
      value="Add Expense"
    />
  </form>
</div>
`;

exports[`Expense Form Test 3 - Invalid Form submision 1`] = `
<div>
  <p>
    Please enter a description and an amount.
  </p>
  <form
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      onChange={[Function]}
      placeholder="Description"
      type="text"
      value=""
    />
    <input
      onChange={[Function]}
      placeholder="Amount"
      type="text"
      value="0"
    />
    <input
      onChange={[Function]}
      placeholder="Date"
      type="number"
    />
    <textarea
      onChange={[Function]}
      placeholder="Add a note for your expense (optional)"
    />
    <input
      type="submit"
      value="Add Expense"
    />
  </form>
</div>
`;
